--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -1,7 +1,7 @@
 header(role="banner", id="global-header", class="with-proposition")
     div.header-wrapper
         div.pure-g
-            div.pure-u-md-1-2
+            div.pure-u-1.pure-u-md-1-2
                 div.header-logo
                     a(href="/", title="Go to the homepage", id="logo", class="content hmppslogo")
                         | HMPPS
@@ -9,7 +9,7 @@ header(role="banner", id="global-header", class="with-proposition")
                     h1.heading-medium.noMargin Home detention curfew (HDC)
 
             if user
-                div.pure-u-md-1-2
+                div.pure-u-1.pure-u-md-1-2
                     div#header-user
                         span.bold #{user.firstName} #{user.lastName} &nbsp;&nbsp;|&nbsp;&nbsp;
                         if user.activeCaseLoad
