--- a/server/views/proposedAddress/bassReferral.pug
+++ b/server/views/proposedAddress/bassReferral.pug
@@ -1,47 +1,26 @@
-extends ../layout
-include ../includes/errorBannerWithDetail
+extends ../formTemplates/eligibilityFormTemplate
 
-block content
+block question
+    | Has the offender requested a BASS referral?
 
-    div.pure-g.pure-u-1
-        include ../includes/back
-        include ../includes/personalDetailsSummary
-        +errorBannerWithDetail(errorObject, [
-            {field: 'decision', message: 'Select yes or no'},
-            {field: 'proposedTown', message: 'Enter a town'},
-            {field: 'proposedCounty', message: 'Enter a county or borough'}
-        ])
+block formItems
+    div.form-group.inline.smallPaddingTop
 
-        div.pure-u-1-2
-            h2.heading-large Has the offender requested a BASS referral?
+        div.multiple-choice(data-target="bassFollowUps")
+            input#yes(type="radio" checked=data && data.decision === 'Yes' name="decision" value="Yes")
+            label(for="yes") Yes
+        div.multiple-choice
+            input#no(type="radio" checked=data && data.decision === 'No' name="decision" value="No")
+            label(for="no") No
 
-    if errorObject.decision
-        p.error-message Select yes or no
-
-    form(method="post")
-        input(type="hidden" name="_csrf" value=csrfToken)
-        input(type="hidden" name="bookingId" value=bookingId || '')
-        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
-            div.largePaddingBottom
-                div.form-group.inline.smallPaddingTop
-
-                    div.multiple-choice(data-target="bassFollowUps")
-                        input#yes(type="radio" checked=data && data.decision === 'Yes' name="decision" value="Yes")
-                        label(for="yes") Yes
-                    div.multiple-choice
-                        input#no(type="radio" checked=data && data.decision === 'No' name="decision" value="No")
-                        label(for="no") No
-
-                div#bassFollowUps.pure-u-1-2(class=errorObject.proposedTown || errorObject.proposedCounty ? 'form-group-error': 'panel panel-border-narrow js-hidden')
-                    if errorObject.proposedTown
-                        span.error-message Enter a town
-                    div.form-group
-                        label(for='proposedTown') Proposed town:
-                        input(type='text' name='proposedTown' id='proposedTown' class='form-control' value=data && data.proposedTown)
-                    if errorObject.proposedCounty
-                        span.error-message Enter a county or borough
-                    div.form-group
-                        label(for='proposedCounty') Proposed county or borough:
-                        input(type='text' name='proposedCounty' id='proposedCounty' class='form-control' value=data && data.proposedCounty)
-
-            include ../includes/formButtons
+    div#bassFollowUps.pure-u-1-2(class=errorObject.proposedTown || errorObject.proposedCounty ? 'form-group-error' : 'panel panel-border-narrow js-hidden')
+        if errorObject.proposedTown
+            span.error-message #{errorObject.proposedTown}
+        div.form-group
+            label(for='proposedTown') Proposed town:
+            input(type='text' name='proposedTown' id='proposedTown' class='form-control' value=data && data.proposedTown)
+        if errorObject.proposedCounty
+            span.error-message #{errorObject.proposedCounty}
+        div.form-group
+            label(for='proposedCounty') Proposed county or borough:
+            input(type='text' name='proposedCounty' id='proposedCounty' class='form-control' value=data && data.proposedCounty)
