--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -33,7 +33,7 @@ mixin addressForm(index, alternative)
                     label.form-label(for="occupierName-"+index) Name
                     input.form-control(id="occupierName-"+index name=addressPosition+"[occupier][name]" value=savedOccupier.name)
 
-                div.form-group.pure-u-1.pure-u-sm-10-24.padLeftRight15
+                div.form-group.pure-u-1.pure-u-sm-10-24.sm-PadLeftRight15
                     label.form-label(for="occupierRelation-"+index) Relation to offender
                     input.form-control(id="occupierRelation-"+index name=addressPosition+"[occupier][relationship]" value=savedOccupier.relationship)
 
