--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -6,7 +6,7 @@ block unsuitableForm
         if errorObject.reason
             span.error-message #{errorObject.reason}
     div.pure-g
-        div.pure-u-10-24
+        div.pure-u-1.pure-u-md-10-24
             div.multiple-choice
                 input(type='checkbox' name='reason[]' id='sexOffender' value='sexOffender' checked=vals.indexOf('sexOffender') !== -1)
                 label(for='sexOffender') Has a history of sexual offending but not required to register
@@ -21,7 +21,7 @@ block unsuitableForm
                 input(type='checkbox' name='reason[]' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
                 label(for='recalled') Recalled for poor behaviour during a previous period of HDC
         div.pure-u-4-24
-        div.pure-u-10-24
+        div.pure-u-1.pure-u-md-10-24
             div.multiple-choice
                 input(type='checkbox' name='reason[]' id='sentenceCategory' value='sentenceCategory' checked=vals.indexOf('sentenceCategory') !== -1)
                 label(for='sentenceCategory') Serving a sentence for one of the following categories:
