--- a/server/views/eligibility/suitability.pug
+++ b/server/views/eligibility/suitability.pug
@@ -1,38 +1,18 @@
-extends ../layout
-include ../includes/errorBannerWithDetail
+extends ../formTemplates/eligibilityFormTemplate
 
-block content
+block question
+    | Is the offender presumed unsuitable?
 
+block formItems
     - var suitabilityValue = data.decision || null;
 
-    div.pure-g.pure-u-1
-        include ../includes/back
-        include ../includes/personalDetailsSummary
-        +errorBannerWithDetail(errorObject, [{field: 'decision'}, {field: 'reason'}])
+    div.form-group.inline
+        div.multiple-choice(data-target="unsuitableForm")
+            input#unsuitableYes(type="radio" checked=suitabilityValue === 'Yes' name="decision" value="Yes")
+            label(for="unsuitableYes") Yes
+        div.multiple-choice
+            input#unsuitableNo(type="radio" checked=suitabilityValue === 'No' name="decision" value="No")
+            label(for="unsuitableNo") No
 
-        div.pure-u-1-2
-            h2.heading-large Is the offender presumed unsuitable?
-
-    if errorObject.decision
-        p.error-message #{errorObject.decision}
-    form(method="post")
-        input(type="hidden" name="_csrf" value=csrfToken)
-        input(type="hidden" name="bookingId" value=bookingId || '')
-        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
-            div.largePaddingBottom
-                div.form-group.inline.smallPaddingTop
-
-                    div.multiple-choice(data-target="unsuitableForm")
-                        input#unsuitableYes(type="radio" checked=suitabilityValue === 'Yes' name="decision" value="Yes")
-                        label(for="unsuitableYes") Yes
-                    div.multiple-choice
-                        input#unsuitableNo(type="radio" checked=suitabilityValue === 'No' name="decision" value="No")
-                        label(for="unsuitableNo") No
-
-                div#unsuitableForm(class=errorObject.reason ? 'form-group-error': 'panel panel-border-narrow js-hidden')
-                    include includes/suitability
-
-            div.paddingBottom.smallPaddingTop
-                div.pure-u-1.inlineButtons
-                    input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
-                    a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + bookingId role="button") Return to tasklist
+    div#unsuitableForm(class=errorObject.reason ? 'form-group-error': 'panel panel-border-narrow js-hidden')
+        include includes/suitability
