--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -7,7 +7,7 @@ block content
                 | #{errors[0]}
 
     div.pure-g
-        div.pure-u-1-3
+        div.pure-u-1.pure-u-md-1-3
 
             form(action='/login', method='POST', class='form')
                 input(type="hidden" name="_csrf" value=csrfToken)
