--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -7,17 +7,20 @@ mixin otherResidents(prefix, savedAddress)
             div.pure-u-1
                 h4.heading-small Other residents
                 p.font-xsmall Only enter an age if the person is under 18
-        div.pure-g
-            div.pure-u-sm-5-12 Name
-            div.pure-u-sm-5-12.padLeftRight15 Relation to offender
-            div.pure-u-sm-1-6 Age
+        div.pure-g.hideMobile
+            div.pure-u-1.pure-u-sm-5-12 Name
+            div.pure-u-1.pure-u-sm-5-12.padLeftRight15 Relation to offender
+            div.pure-u-1.pure-u-sm-1-6 Age
 
         while n < residentsToShow
-            div.pure-g.smallPaddingBottom.resident
-                div.pure-u-sm-5-12
-                    input.form-control.residentName(name=prefix+"[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off")
-                div.pure-u-sm-5-12.padLeftRight15
-                    input.form-control.residentRelation(name=prefix+"[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off")
-                div.pure-u-sm-1-6
-                    input.form-control.residentAge(name=prefix+"[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off")
+            div.pure-g.u-paddingBottom.sm-smallPaddingBottom.resident
+                div.pure-u-1.pure-u-sm-5-12
+                    label.form-label.hideNonMobile(for="residentName-"+n) Name
+                    input.form-control.residentName(id="residentName-"+n name=prefix+"[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off")
+                div.pure-u-1.pure-u-sm-5-12.sm-PadLeftRight15
+                    label.form-label.hideNonMobile(for="residentRelation-"+n) Relation to offender
+                    input.form-control.residentRelation(id="residentRelation-"+n name=prefix+"[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off")
+                div.pure-u-1.pure-u-sm-1-6
+                    label.form-label.hideNonMobile(for="residentAge-"+n) Age
+                    input.form-control.residentAge(id="residentAge-"+n name=prefix+"[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off")
             - n++
