--- a/server/views/send/caToRo.pug
+++ b/server/views/send/caToRo.pug
@@ -8,7 +8,7 @@ block content
             include ../includes/personalDetailsSummary
 
     div.pure-g.largePaddingBottom
-        div.pure-u-2-3
+        div.pure-u-1.pure-u-2-3
             h2.heading-large.midPaddingBottom Submit curfew address
             p.lede The proposed curfew address is ready to send to the offender's responsible officer.
 
@@ -27,5 +27,7 @@ block content
                 input(type="hidden" name="transitionType" value='caToRo')
                 if submissionTarget && submissionTarget.com
                     input(type="hidden" name="submissionTarget" value=submissionTarget.com)
-                input#continueBtn.requiredButton.button.button-start(type="submit" value="Submit address")
-                a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Cancel
+
+                div.pure-u-1.inlineButtons.paddingBottom.smallPaddingTop
+                    input#continueBtn.requiredButton.button.button-start.midMarginBottom(type="submit" value="Submit address")
+                    a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Cancel
