--- a/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
@@ -3,14 +3,13 @@ div.largeMarginBottom.borderTop
     h2.heading-medium Submit to responsible officer
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress)
                 | Ready to submit
             else
                 | Submission unavailable - Tasks not yet complete
 
-        div.pure-u-1-4.center
-
+        div.pure-u-1.pure-u-md-1-4.center
             if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress)
                 a#continueBtn.taskListAction.center.button(href='/hdc/review/curfewAddress/' + prisonerInfo.bookingId)
                     | Continue
