--- a/server/views/taskList/tasks/caSubmitRefusalTask.pug
+++ b/server/views/taskList/tasks/caSubmitRefusalTask.pug
@@ -2,9 +2,9 @@ div.largeMarginBottom.borderTop
     h2.heading-medium Submit to decision maker
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             | Ready to submit for refusal
 
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             a#continueBtn.taskListAction.center.button(href="/hdc/send/refusal/" + prisonerInfo.bookingId)
                 | Continue
