--- a/server/views/taskList/tasks/eligibilityTask.pug
+++ b/server/views/taskList/tasks/eligibilityTask.pug
@@ -19,7 +19,7 @@ div.largeMarginBottom
         div.pure-g
             div.pure-u-1.pure-u-md-3-4
                 div.pure-g
-                    div.pure-u-3-4
+                    div.pure-u-1.pure-u-3-4
 
                         div.pure-g.borderTopLight.smallPaddingTopBottom
                             div.pure-u-3-4.padRight15
@@ -76,6 +76,6 @@ div.largeMarginBottom
                                     else
                                         | No
 
-            div.pure-u-1.pure-u-md-1-4.center
+            div.change.pure-u-1.pure-u-md-1-4.center
                 a#eligibilityCheckUpdate(href='/hdc/eligibility/excluded/'+prisonerInfo.bookingId) Change
 
