--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -1,7 +1,7 @@
 div.largeMarginBottom.borderTop
     h2.heading-medium Proposed address / opt out request
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             if licenceStatus.tasks.curfewAddress === 'UNSTARTED'
                 | Not completed
             else if licenceStatus.decisions.optedOut
@@ -15,7 +15,7 @@ div.largeMarginBottom.borderTop
             else
                 | Information not yet submitted
 
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             if licenceStatus.decisions.curfewAddressApproved === 'rejected'
                 +startContinueView(licenceStatus.tasks.curfewAddress, "/hdc/proposedAddress/rejected/" + prisonerInfo.bookingId)
             else
