--- a/server/views/taskList/tasks/returnToCaTask.pug
+++ b/server/views/taskList/tasks/returnToCaTask.pug
@@ -1,6 +1,6 @@
-div.taskListItem.taskListSingleLineItem.borderBottom.pure-g
-    div.pure-u-3-4
+div.taskListSingleLineItem.u-paddingBottom.sm-midPaddingBottom.pure-g
+    div.pure-u-1.pure-u-md-3-4
         h2.heading-medium Return to prison case admin
 
-    div.pure-u-1-4.center.buttonContainer
+    div.pure-u-1.pure-u-md-1-4.center.buttonContainer
         a.taskListAction.center.button.button-secondary(href="/hdc/send/return/" + prisonerInfo.bookingId) Return to PCA
