--- a/server/views/taskList/tasks/additionalConditionsTask.pug
+++ b/server/views/taskList/tasks/additionalConditionsTask.pug
@@ -1,8 +1,8 @@
-div.taskListItem
+div.paddingBottom
     h2.heading-medium Additional conditions
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             if licenceStatus.tasks.licenceConditions === 'DONE'
                 if licenceStatus.decisions.standardOnly
                     div Standard conditions only
@@ -17,7 +17,8 @@ div.taskListItem
                             |  added
             else
                 | Not completed
-        div.pure-u-1-4.center
+
+        div.pure-u-1.pure-u-md-1-4.center
 
             -var roleCanModify = (user.role === 'RO' || user.role === 'CA')
 
