--- a/server/views/taskList/tasks/approvalTask.pug
+++ b/server/views/taskList/tasks/approvalTask.pug
@@ -1,15 +1,11 @@
-div.taskListItem.borderBottom.largeMarginBottom
+div.paddingBottom
     h2.heading-medium Final decision
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             | #{statusLabel}
             if (licenceStatus.decisions.refusalReason)
                 | : #{licenceStatus.decisions.refusalReason}
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             if (licenceStatus.stage === 'APPROVAL')
                 +startContinueView(licenceStatus.tasks.approval, "/hdc/approval/release/" + prisonerInfo.bookingId)
-
-
-
-
