--- a/server/views/taskList/tasks/caSubmitApprovalTask.pug
+++ b/server/views/taskList/tasks/caSubmitApprovalTask.pug
@@ -1,9 +1,9 @@
-div.largeMarginBottom.borderTop
+div.paddingBottom
 
     h2.heading-medium Submit to decision maker
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             if allowedTransition === 'caToDm'
                 | Ready to submit
             else if licenceStatus.decisions.postponed
@@ -14,6 +14,6 @@ div.largeMarginBottom.borderTop
                 | Submission unavailable - Tasks not yet complete
 
         if allowedTransition === 'caToDm'
-            div.pure-u-1-4.center
+            div.pure-u-1.pure-u-md-1-4.center
                 a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.bookingId)
                     | Continue
