--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -1,10 +1,10 @@
-div.taskListItem.borderBottom.largeMarginBottom
+div.paddingBottom
     h2.heading-medium Create licence
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             | #{statusLabel}
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             if postApproval && licenceStatus.stage !== 'MODIFIED_APPROVAL'
                 if user.role === 'CA' && licenceStatus.decisions.approved
                     a#createPdf.taskListAction.center.button(href="/hdc/pdf/select/" + bookingId role="button") Continue
