--- a/server/views/taskList/tasks/curfewAddressTask.pug
+++ b/server/views/taskList/tasks/curfewAddressTask.pug
@@ -1,4 +1,4 @@
-div.taskListItem
+div.paddingBottom
     h2.heading-medium Proposed curfew address
 
     if licenceStatus.decisions.bassReferralNeeded || licenceStatus.decisions.optedOut
@@ -11,7 +11,7 @@ div.taskListItem
 
     else
         div.pure-g
-            div.pure-u-3-4
+            div.pure-u-1.pure-u-md-3-4
                 -var curfewAddressApproved = licenceStatus.decisions.curfewAddressApproved;
 
                 if curfewAddressApproved === 'approved'
@@ -22,7 +22,7 @@ div.taskListItem
                     span.bold.alert Address rejected
                 else
                     | Not completed
-            div.pure-u-1-4.center
+            div.pure-u-1.pure-u-md-1-4.center
                 if user.role === 'RO'
                     +startContinueView(licenceStatus.tasks.curfewAddressReview, "/hdc/curfew/curfewAddressReview/" + prisonerInfo.bookingId)
                 else if user.role === 'CA' && postApproval
