--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -1,4 +1,4 @@
-div.largeMarginBottom.borderTop
+div.largeMarginBottom
     h2.heading-medium Proposed address / opt out request
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
