--- a/server/views/taskList/tasks/refusalTask.pug
+++ b/server/views/taskList/tasks/refusalTask.pug
@@ -1,10 +1,10 @@
-div.taskListItem.borderBottom.largeMarginBottom
+div.paddingBottom
     h2.heading-medium Final decision
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             | #{statusLabel}
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             if (licenceStatus.stage === 'APPROVAL')
                 a.taskListAction.center.button(href="/hdc/approval/crdRefuse/" + prisonerInfo.bookingId)
                     | Refuse HDC
