--- a/server/views/taskList/tasks/roSubmitTask.pug
+++ b/server/views/taskList/tasks/roSubmitTask.pug
@@ -1,8 +1,8 @@
-div.taskListItem.submit
+div.paddingBottom.borderBottomLight
     h2.heading-medium Submit to PCA
 
     div.pure-g
-        div#submitPcaStatus.pure-u-3-4
+        div#submitPcaStatus.pure-u-1.pure-u-md-3-4
             if licenceStatus.stage === 'PROCESSING_RO'
                 if allowedTransition === 'roToCa'
                     | Ready to submit
@@ -10,7 +10,7 @@ div.taskListItem.submit
                     | Tasks not yet complete
             else
                 | #{statusLabel}
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             if licenceStatus.stage === 'PROCESSING_RO'
 
                 if licenceStatus.decisions.optedOut
