updated ro forms to work on mobile

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -128,6 +128,7 @@ $path: "/public/images/";
     .sm-PadLeftRight15 {padding: 0 15px};
     .sm-smallPaddingBottom {padding-bottom: 10px};
     .sm-midPaddingBottom {padding-bottom: 20px};
+    .sm-padRight30 {padding-right: 30px};
     .hideNonMobile {display:none};
     .change-details {margin-top: 2.5em;}
     .taskListSingleLineItem .buttonContainer{margin-top: 2.3em;}
