--- a/server/views/licenceConditions/includes/bespokeConditions.pug
+++ b/server/views/licenceConditions/includes/bespokeConditions.pug
@@ -18,9 +18,9 @@ div.pure-g
             while n < bespokeConditionsToShow
                 div.bespokeConditionsForm.largeMarginBottom
                     div.bespokeTitleWrapper.pure-g
-                        div.pure-u-md-3-4
+                        div.pure-u-1.pure-u-md-3-4
                             p.bold.bespokeTitle Enter bespoke condition
-                        div.removeWrapper.pure-u-md-1-4.alignRight
+                        div.removeWrapper.pure-u-1.pure-u-md-1-4.alignRight
                     div(style="position:relative")
                         a.namedAnchor(name="bespoke-" + n)
                     div.pure-g.smallPaddingBottom
