--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -10,7 +10,7 @@ block content
     h1.heading-large Standard licence conditions
 
     div.pure-g.paddingBottom
-        div.pure-u-2-3
+        div.pure-u-1.pure-u-md-2-3
             P The following conditions are always included on the licence:
 
             p An offender must:
