--- a/server/views/review/includes/additionalConditions.pug
+++ b/server/views/review/includes/additionalConditions.pug
@@ -4,7 +4,7 @@ mixin additionalConditions(editable)
 
     for condition, index in conditions
         div.additional.pure-g.borderBottomLight.midPaddingTopBottom
-            div.pure-u-18-24.padRight30
+            div.pure-u-1.pure-u-md-18-24.sm-padRight30.u-paddingBottom
                 if condition.group
                     div.heading-small.noMargin.smallPaddingBottom
                         span.number #{index + 1}.
@@ -32,14 +32,15 @@ mixin additionalConditions(editable)
 
             if allowEdit
                 div.pure-u-2-24
-                div.pure-u-4-24
-                    if condition.inputRequired || condition.group === 'Bespoke'
-                        div
-                            a.link(href="/hdc/licenceConditions/additionalConditions/" + bookingId + "#" + condition.id) Change
-                    div
-                        form(method="post" action="/hdc/licenceConditions/additionalConditions/" + bookingId + "/delete/" + condition.id)
-                            input(type="hidden" name="_csrf" value=csrfToken)
-                            input(type="hidden" name="bookingId" value=bookingId || '')
-                            input(type="hidden" name="conditionId" value=condition.id || '')
+                div.pure-u-1.pure-u-md-4-24
+                    div.pure-g
+                        if condition.inputRequired || condition.group === 'Bespoke'
+                            div.pure-u-1-2.center
+                                a.link(href="/hdc/licenceConditions/additionalConditions/" + bookingId + "#" + condition.id) Change
+                        div.pure-u-1-2.center
+                            form(method="post" action="/hdc/licenceConditions/additionalConditions/" + bookingId + "/delete/" + condition.id)
+                                input(type="hidden" name="_csrf" value=csrfToken)
+                                input(type="hidden" name="bookingId" value=bookingId || '')
+                                input(type="hidden" name="conditionId" value=condition.id || '')
 
-                            input.link(type="submit" value="Delete")
+                                input.link(type="submit" value="Delete")
