--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -5,14 +5,14 @@ div.largeMarginBottom
     // Proposed address
     div.borderBottom
         div.pure-g
-            div.pure-u-md-1-2
+            div.pure-u-1.pure-u-md-1-2
                 h2#curfewAddressDetails.heading-medium Proposed curfew address
-            div.pure-u-md-1-2.alignRight
+            div.pure-u-1.pure-u-md-1-2.alignRight
                 div.pure-u-md-1-2.change-details
                     if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                        a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + bookingId) Change these details
+                        a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + bookingId) Change
                     if(stage === 'ELIGIBILITY' && user.role === 'CA')
-                        a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + bookingId) Change these details
+                        a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + bookingId) Change
 
         if typeof errorObject.proposedAddress === 'string'
             p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
@@ -24,12 +24,12 @@ div.largeMarginBottom
         // Risk
         div.borderBottom
             div.pure-g
-                div.pure-u-md-1-2
+                div.pure-u-1.pure-u-md-1-2
                     h2#riskDetails.heading-medium Risk management and victim liaison
                 if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                    div.pure-u-md-1-2.alignRight
+                    div.pure-u-1.pure-u-md-1-2.alignRight
                         div.pure-u-md-1-2.change-details
-                            a#riskEditLink(href="/hdc/risk/riskManagement/" + bookingId) Change these details
+                            a#riskEditLink(href="/hdc/risk/riskManagement/" + bookingId) Change
 
             if typeof errorObject.risk === 'string'
                 p.alert.bold(id='risk-error') Enter the risk management and victim liaison details
@@ -39,12 +39,12 @@ div.largeMarginBottom
         // Curfew hours
         div.borderBottom
             div.pure-g
-                div.pure-u-md-1-2
+                div.pure-u-1.pure-u-md-1-2
                     h2#curfewHoursDetails.heading-medium Proposed HDC curfew hours
                 if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                    div.pure-u-md-1-2.alignRight
+                    div.pure-u-1.pure-u-md-1-2.alignRight
                         div.pure-u-md-1-2.change-details
-                            a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + bookingId) Change these details
+                            a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + bookingId) Change
 
             if typeof errorObject.curfew === 'string'
                 p.alert.bold(id='curfew-hours-error') Select the proposed curfew hours
@@ -57,12 +57,12 @@ div.largeMarginBottom
             -var linkTo = standardOnly ?  'standard' : 'additionalConditions'
 
             div.pure-g
-                div.pure-u-md-1-2
+                div.pure-u-1.pure-u-md-1-2
                     h2.heading-medium Additional conditions
                 if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                    div.pure-u-md-1-2.alignRight
+                    div.pure-u-1.pure-u-md-1-2.alignRight
                         div.pure-u-md-1-2.change-details
-                            a#conditionsEditLink(href="/hdc/licenceConditions/" + linkTo + "/" + bookingId) Change these details
+                            a#conditionsEditLink(href="/hdc/licenceConditions/" + linkTo + "/" + bookingId) Change
 
             if typeof errorObject.licenceConditions === 'string'
                 p.alert.bold(id='additional-conditions-error') #{errorObject.licenceConditions}
@@ -77,12 +77,12 @@ div.largeMarginBottom
         // Reporting instructions
         div.borderBottom
             div.pure-g
-                div.pure-u-md-1-2
+                div.pure-u-1.pure-u-md-1-2
                     h2#reportingDetails.heading-medium Reporting instructions
                 if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                    div.pure-u-md-1-2.alignRight
+                    div.pure-u-1.pure-u-md-1-2.alignRight
                         div.pure-u-md-1-2.change-details
-                            a#reportingEditLink(href="/hdc/reporting/reportingInstructions/" + bookingId) Change these details
+                            a#reportingEditLink(href="/hdc/reporting/reportingInstructions/" + bookingId) Change
 
             if typeof errorObject.reporting === 'string'
                 p.alert.bold(id='reporting-error') Enter the reporting instructions
