--- a/server/views/send/includes/sendButtons.pug
+++ b/server/views/send/includes/sendButtons.pug
@@ -1,2 +1,3 @@
-input#continueBtn.requiredButton.button.button-start(type="submit" value="Submit")
-a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Return to task list
+div.pure-u-1.inlineButtons.paddingBottom
+    input#continueBtn.requiredButton.button.button-start.midMarginBottom(type="submit" value="Submit")
+    a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Return to task list
