--- a/server/views/sent/mixins/sentMixin.pug
+++ b/server/views/sent/mixins/sentMixin.pug
@@ -1,6 +1,6 @@
 mixin sentContent(title)
     div.pure-g.largeMarginBottom
-        div.pure-u-1.pure-md-3-5
+        div.pure-u-1.pure-u-lg-3-5
             div.confirm-banner
                 div.pure-g
                     div.pure-u-1.pure-u-md-1-8.smallMarginTop.smallPaddingTop.padLeft15
